# 3rd-Semester-Lab-Works

./: README.md
ИСП/353503_Dziarhun_Lab1-2/: 353503_Dziarhun_Lab1.sln
ИСП/353503_Dziarhun_Lab1-2/353503_Dziarhun_Lab1/: 353503_Dziarhun_Lab1.csproj  Program.cs
ИСП/353503_Dziarhun_Lab1-2/353503_Dziarhun_Lab1/Contracts/: IInternetOperator.cs
ИСП/353503_Dziarhun_Lab1-2/353503_Dziarhun_Lab1/Entities/: InternetOperatorSystem.cs  Journal.cs  Tariff.cs  User.cs
ИСП/353503_Dziarhun_Lab3/353503_Dziarhun_Lab1/: 353503_Dziarhun_Lab1.csproj  Program.cs
ИСП/353503_Dziarhun_Lab4/: 353503_Dziarhun_Lab4.sln
ИСП/353503_Dziarhun_Lab4/353503_Dziarhun_Lab4/: 353503_Dziarhun_Lab4.csproj  Program.cs
ИСП/353503_Dziarhun_Lab5/: 353503_Dziarhun_Lab5.sln
ИСП/353503_Dziarhun_Lab5/353503_Dziarhun_Lab5/: 353503_Dziarhun_Lab5.csproj  Program.cs  appsettings.json
ИСП/353503_Dziarhun_Lab5/353505_Dziarhun_Lab5.Domain/: 353505_Dziarhun_Lab5.Domain.csproj
ИСП/353503_Dziarhun_Lab5/SerializerLib/: Serializer.cs  SerializerLib.csproj
ИСП/353503_Dziarhun_Lab6/: 353503_Dziarhun_Lab6.sln
ИСП/353503_Dziarhun_Lab6/Main/: Program.cs
ИСП/353503_Dziarhun_Lab7/: 353503_Dziarhun_Lab7.sln
ИСП/353503_Dziarhun_Lab7/353503_Dziarhun_Lab7/: 353503_Dziarhun_Lab7.csproj  Program.cs  SinIntegral.cs
ИСП/353503_Dziarhun_Lab8/: 353503_Dziarhun_Lab8.sln
ИСП/353503_Dziarhun_Lab8/353503_Dziarhun_Lab8/: 353503_Dziarhun_Lab8.csproj  Program.cs
КПрог/l1/: 1.docx  l1_e1.asm  l1_e2.asm
КПрог/l2/: 2.docx  l2_e2.asm
КПрог/l3/: 3.docx  l3t1.asm  l3t1_exe.asm  l3t2.asm
КПрог/l4/: 4.docx  l4_re.asm
КПрог/l5/: 2.asm  5.docx
КПрог/l6/: 6.docx
КПрог/l6/lab/: 6.asm  div.asm  mul.asm  readme.txt  sub.asm  sum.asm
КПрог/l7/: 7.docx
КПрог/l7/7/: CMakeLists.txt  ciphermanager.cpp  ciphermanager.h  consts.h  editwindow.cpp  editwindow.h  editwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openmanager.cpp  openmanager.h  openmanager.ui  popups.cpp  popups.h  savemanager.cpp  savemanager.h  savemanager.ui  windowsmanager.cpp  windowsmanager.h
КПрог/l7/7/asm/: cf.asm  rand.asm  tf.asm  vf.asm
(+19 files in other folders)
